package com.example.telecom.entity;

public enum ContractHolderType {
    CUSTOMER,
    CUSTOMER_GROUP
}
