package com.example.telecom.entity;

public enum ContractType {
    INDIVIDUAL,
    ENTERPRISE
}
