package com.example.telecom.entity;
public enum Role {
    METIER,
    EXPLOIT,
    DSI,
    VENTE
}
